name:                   hw-all
version:                0.0.0.1
synopsis:               Demo library
description:            Please see README.md
homepage:               http://github.com/haskell-works/hw-json#readme
license:                BSD3
license-file:           LICENSE
author:                 John Ky
maintainer:             newhoggy@gmail.com
copyright:              2016 John Ky
category:               Data, Conduit
build-type:             Simple
extra-source-files:     README.md
cabal-version:          >= 1.22

library
  hs-source-dirs:       src
  exposed-modules:      HaskellWorks.Data.Json.Demo
  build-depends:        base                          >= 4          && < 5
                      , aeson
                      , array
                      , attoparsec
                      , bytestring
                      , conduit
                      , containers
                      , deepseq
                      , dlist
                      , hw-balancedparens
                      , hw-bits
                      , hw-conduit
                      , hw-diagnostics
                      , hw-eliasfano
                      , hw-excess
                      , hw-int
                      , hw-json
                      , hw-json-lens
                      , hw-json-mquery
                      , hw-mquery
                      , hw-parser
                      , hw-prim
                      , hw-rankselect
                      , hw-rankselect-base
                      , hw-string-parse
                      , hw-succinct
                      , hw-xml
                      , mmap
                      , mono-traversable
                      , resourcet
                      , text
                      , vector
                      , word8

  default-language:     Haskell2010
  ghc-options:          -Wall -O2 -msse4.2

source-repository head
  type:     git
  location: https://github.com/haskell-works/hw-all
